--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,5 +14,11 @@ and open the template in the editor.
         <p>Proyecto ARSW</p>
 
         <div>TODO write content</div>
+        
+        <p id="demo">Click the button to get your position.</p>
+
+        <button onclick="getLocation()">Try It</button>
+
+        <div id="mapholder"></div>
     </body>
 </html>
