--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
         
         <p id="demo">Click the button to get your position.</p>
 
-        <button onclick="getLocation()">Try It</button>
+        <button onclick="module.getLocation()">Try It</button>
 
         <div id="mapholder"></div>
     </body>
