--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,14 +6,12 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Encuentra a tus Amigos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <p>Proyecto ARSW</p>
-
-        <div>TODO write content</div>
         
         <p id="demo">Click the button to get your position.</p>
 
