--- a/src/main/resources/static/signUp.html
+++ b/src/main/resources/static/signUp.html
@@ -23,6 +23,15 @@
             border: 1px solid #ccc;
             box-sizing: border-box;
         }
+        header, footer {
+            padding: 1em;
+            color: white;
+            background-color: #941718;
+            clear: left;
+            text-align: left;
+            height: 120px;
+        }
+        
 
         /* Set a style for all buttons */
         button {
@@ -67,7 +76,15 @@
         }
     </style>
     <body>
-
+        <header>
+            <div >
+                <div id="container">
+                    <div >
+                        <img src="amigos.png" aling="left" height="100" >
+                    </div>
+                </div>       
+            </div>      
+        </header>
         <h2>Signup Form</h2>
 
         <form action="/action_page.php" style="border:1px solid #ccc">
