--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,9 @@ and open the template in the editor.
         <script src="/webjars/stomp-websocket/stomp.min.js"></script>
         <script src="js/apimock.js"></script>
         <script src="js/app.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHu_EZwEveMMjbM7HHzHnNTG161osO73w"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHu_EZwEveMMjbM7HHzHnNTG161osO73w&libraries=geometry"></script>
+        
+
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     
